--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "go": "git add . && git commit -m \"Update website\" && git push && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
