--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "go": "git add . && git commit -m \"Update website\" && git push && npm run build"
+    "go": "git add . && git commit -m \"Update website\" && git push && npm run build",
+    "deploy": "npm run build && git add . && git commit -m \"Deploy to GitHub Pages\" && git push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
