--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,59 @@
 name: Deploy to GitHub Pages
 
 on:
+  # Läuft bei jedem Push auf den main Branch
   push:
     branches: [ main ]
+  # Erlaubt manuelles Auslösen
   workflow_dispatch:
 
+# GITHUB_TOKEN Berechtigungen setzen
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+# Erlaubt nur einen gleichzeitigen Deployment-Workflow
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build
+
+      - name: Build website
         run: npm run build
-        env:
-          BASE_URL: '/webseite-andrea-wennecke/'
-      
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: gh-pages
-          destination_dir: webseite-andrea-wennecke 
+          path: './dist'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 
