--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "add": "git add .",
+    "add": "git add . || true",
     "commit": "git commit -m \"Update website\" || true",
     "push": "git push || true",
-    "build:prod": "npm run build",
-    "deploy": "npm run build && git add . && git commit -m \"Deploy to GitHub Pages\" && git push",
+    "build:prod": "npm run build || true",
+    "deploy": "npm run build && git add . && git commit -m \"Deploy to GitHub Pages\" && git push || true",
     "go": "npm run add && npm run commit && npm run push && npm run build:prod && npm run deploy"
   },
   "dependencies": {
